Add Express P&L Pro Forma card to index.html
Added a new card for the Express P&L Pro Forma with a link and description.

--- a/index.html
+++ b/index.html
@@ -233,18 +233,19 @@
     </header>
 
     <main class="grid">
-      <!-- Example card: Recruiting / Transition Packages -->
-      <a class="card" href="#" target="_blank" rel="noopener noreferrer">
-        <div class="card-label">Recruiting</div>
-        <div class="card-title">Transition Package Preview</div>
-        <div class="card-body">
-          Personalized landing pages that show recruits their projected comp, pricing access, and ops support under the hybrid model.
-        </div>
-        <div class="card-footer">
-          <span class="chip">Coming soon</span>
-          <span class="arrow">↗</span>
-        </div>
-      </a>
+      <!-- Express P&L Pro Forma -->
+<a class="card" href="https://expresspnl.whylendingheights.com" target="_blank" rel="noopener noreferrer">
+  <div class="card-label">Recruiting · Finance</div>
+  <div class="card-title">Express P&L Pro Forma</div>
+  <div class="card-body">
+    Interactive profit & loss model for recruits and branches to see comp, margin, and ops costs under the Lending Heights hybrid platform.
+  </div>
+  <div class="card-footer">
+    <span class="chip">Live</span>
+    <span class="arrow">↗</span>
+  </div>
+</a>
+
 
       <!-- Example card: Onboarding -->
       <a class="card" href="#" target="_blank" rel="noopener noreferrer">
